# pydevcli

./: .pre-commit-config.yaml  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: dev.yml  release.yml  stage.yml
docs/: CHANGELOG.md  development.md  index.md
pydevcli/db/: cli.py
tests/: test_util.py
