[tool.poetry]
name = "python-scripts"
version = "0.1.0"
description = "Python Scripts for various purposes"
authors = ["giraycoskun <giraycoskun.dev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
